components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__transcript_every_candidate_unusable.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "format!(\"{header}{}\", transcript(&plan, &executor, false))"
---
run_scm: Ok, status completed

# fits dispatched
base/1001_base
forward_round1/1001_wt_cl
forward_round1/1001_crcl_cl
forward_round1/1001_wt_v
forward_round1/1001_wt_cl
forward_round1/1001_crcl_cl
forward_round1/1001_wt_v
final/1001_scm_final

# files in out_dir
base/1001_base.mod
base/1001_base/1001_base.ext
base/1001_base/1001_base.lst
base/1001_base/1001_base.mod
base/1001_base/pharos_end.json
base/1001_base/pharos_start.json
base/1001_base/pharos_summary.json
base/round_summary.json
base/round_summary.md
final/1001_scm_final.mod
final/1001_scm_final/1001_scm_final.ext
final/1001_scm_final/1001_scm_final.lst
final/1001_scm_final/1001_scm_final.mod
final/1001_scm_final/pharos_end.json
final/1001_scm_final/pharos_start.json
final/1001_scm_final/pharos_summary.json
forward_round1/1001_crcl_cl.mod
forward_round1/1001_crcl_cl/1001_crcl_cl.ext
forward_round1/1001_crcl_cl/1001_crcl_cl.lst
forward_round1/1001_crcl_cl/1001_crcl_cl.mod
forward_round1/1001_crcl_cl/pharos_end.json
forward_round1/1001_crcl_cl/pharos_start.json
forward_round1/1001_crcl_cl/pharos_summary.json
forward_round1/1001_crcl_cl_try2.mod
forward_round1/1001_crcl_cl_try2/1001_crcl_cl_try2.ext
forward_round1/1001_crcl_cl_try2/1001_crcl_cl_try2.lst
forward_round1/1001_crcl_cl_try2/1001_crcl_cl_try2.mod
forward_round1/1001_crcl_cl_try2/pharos_end.json
forward_round1/1001_crcl_cl_try2/pharos_start.json
forward_round1/1001_wt_cl.mod
forward_round1/1001_wt_cl/1001_wt_cl.ext
forward_round1/1001_wt_cl/1001_wt_cl.lst
forward_round1/1001_wt_cl/1001_wt_cl.mod
forward_round1/1001_wt_cl/pharos_end.json
forward_round1/1001_wt_cl/pharos_start.json
forward_round1/1001_wt_cl/pharos_summary.json
forward_round1/1001_wt_cl_try2.mod
forward_round1/1001_wt_cl_try2/1001_wt_cl_try2.ext
forward_round1/1001_wt_cl_try2/1001_wt_cl_try2.lst
forward_round1/1001_wt_cl_try2/1001_wt_cl_try2.mod
forward_round1/1001_wt_cl_try2/pharos_end.json
forward_round1/1001_wt_cl_try2/pharos_start.json
forward_round1/1001_wt_cl_try2/pharos_summary.json
forward_round1/1001_wt_v.mod
forward_round1/1001_wt_v/1001_wt_v.ext
forward_round1/1001_wt_v/1001_wt_v.lst
forward_round1/1001_wt_v/1001_wt_v.mod
forward_round1/1001_wt_v/pharos_start.json
forward_round1/1001_wt_v/pharos_terminated.json
forward_round1/1001_wt_v_try2.mod
forward_round1/1001_wt_v_try2/1001_wt_v_try2.ext
forward_round1/1001_wt_v_try2/1001_wt_v_try2.lst
forward_round1/1001_wt_v_try2/1001_wt_v_try2.mod
forward_round1/1001_wt_v_try2/pharos_end.json
forward_round1/1001_wt_v_try2/pharos_start.json
forward_round1/1001_wt_v_try2/pharos_summary.json
forward_round1/round_summary.json
forward_round1/round_summary.md
plan.json
scm_state.json
scm_summary.json
scm_summary.md

# scm_summary.md
# SCM summary

- out dir: scm/1001
- model: 1001.mod
- status: completed (updated [TIMESTAMP]) · 1 round complete
- direction: forward
- alphas: forward 0.05
- cov step: off
- candidates: WT_CL, CRCL_CL, WT_V
- note: SCM process completed, but some candidates were unusable (see scm_summary.md); they were reported, never scored as insignificant
- path: none
- final model: final/1001_scm_final.mod (OFV 1234.000)

## reference

- model: `base/1001_base.mod` (succeeded)
- heuristic checks fired: none
- decision: base model fitted (OFV 1000.000)
- wall time: 1m 30s

## forward_round1

- reference: `base/1001_base.mod` (OFV 1000.000)
- alpha: 0.05
- all models minimized: no
- heuristic checks fired: yes
- decision: no candidate could be scored (3 unusable); forward selection stopped
- retained before this round: none
- retained after this round: none
- wall time: 1m 30s

| candidate | model | attempts | status | OFV | ΔOFV | crit ΔOFV | df | p | significant | selected | estimate (RSE%) | cond# | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `forward_round1/1001_wt_cl_try2.mod` | 2 | unusable |  |  | 3.841 | 1 |  |  |  | 0.250 (N/A) |  | minimization terminated |
| CRCL_CL | `forward_round1/1001_crcl_cl_try2.mod` | 2 | unusable |  |  | 3.841 | 1 |  |  |  |  |  | program aborted |
| WT_V | `forward_round1/1001_wt_v_try2.mod` | 2 | unusable |  |  | 3.841 | 1 |  |  |  |  |  |  |

_Unusable candidates are reported above; they are never scored as insignificant._
