components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__transcript_reference_fit_fails_every_attempt.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "format!(\"error: {err:#}\\n\\n{}\", transcript(&plan, &executor, false))"
---
error: reference base model failed after 2 attempt(s); the SCM process cannot start

# fits dispatched
base/1001_base
base/1001_base

# files in out_dir
base/1001_base.mod
base/1001_base/1001_base.ext
base/1001_base/1001_base.lst
base/1001_base/1001_base.mod
base/1001_base/pharos_end.json
base/1001_base/pharos_start.json
base/1001_base/pharos_summary.json
base/1001_base_try2.mod
base/1001_base_try2/1001_base_try2.ext
base/1001_base_try2/1001_base_try2.lst
base/1001_base_try2/1001_base_try2.mod
base/1001_base_try2/pharos_end.json
base/1001_base_try2/pharos_start.json
base/1001_base_try2/pharos_summary.json
base/round_summary.json
base/round_summary.md
plan.json
scm_state.json
scm_summary.json
scm_summary.md

# scm_summary.md
# SCM summary

- out dir: scm/1001
- model: 1001.mod
- status: failed (updated [TIMESTAMP]) · no rounds complete
- direction: forward
- alphas: forward 0.05
- cov step: off
- candidates: WT_CL, CRCL_CL, WT_V
- note: reference base model failed after 2 attempt(s); the SCM process cannot start
- path: none

## reference

- model: `base/1001_base_try2.mod` (unusable)
- attempts: `base/1001_base.mod` minimization terminated; `base/1001_base_try2.mod` no ofv
- heuristic checks fired: none
- decision: base model failed after 2 attempt(s)
- wall time: 1m 30s
