components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__transcript_unusable_candidate_after_retries.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: "transcript(&plan, &executor)"
---
# fits dispatched
base/1001_base
forward_round1/1001_wt_cl
forward_round1/1001_crcl_cl
forward_round1/1001_wt_v
forward_round1/1001_wt_v
forward_round2/1001_crcl_cl
forward_round2/1001_wt_v
forward_round2/1001_wt_v
final/1001_scm_final

# files in out_dir
base/1001_base.mod
base/1001_base/1001_base.ext
base/1001_base/1001_base.lst
base/1001_base/pharos_end.json
base/1001_base/pharos_start.json
base/round_summary.json
base/round_summary.md
final/1001_scm_final.mod
final/1001_scm_final/1001_scm_final.ext
final/1001_scm_final/1001_scm_final.lst
final/1001_scm_final/pharos_end.json
final/1001_scm_final/pharos_start.json
forward_round1/1001_crcl_cl.mod
forward_round1/1001_crcl_cl/1001_crcl_cl.ext
forward_round1/1001_crcl_cl/1001_crcl_cl.lst
forward_round1/1001_crcl_cl/pharos_end.json
forward_round1/1001_crcl_cl/pharos_start.json
forward_round1/1001_wt_cl.mod
forward_round1/1001_wt_cl/1001_wt_cl.ext
forward_round1/1001_wt_cl/1001_wt_cl.lst
forward_round1/1001_wt_cl/pharos_end.json
forward_round1/1001_wt_cl/pharos_start.json
forward_round1/1001_wt_v.mod
forward_round1/1001_wt_v/1001_wt_v.ext
forward_round1/1001_wt_v/1001_wt_v.lst
forward_round1/1001_wt_v/pharos_end.json
forward_round1/1001_wt_v/pharos_start.json
forward_round1/1001_wt_v_try2.mod
forward_round1/1001_wt_v_try2/1001_wt_v_try2.ext
forward_round1/1001_wt_v_try2/1001_wt_v_try2.lst
forward_round1/1001_wt_v_try2/pharos_end.json
forward_round1/1001_wt_v_try2/pharos_start.json
forward_round1/round_summary.json
forward_round1/round_summary.md
forward_round2/1001_crcl_cl.mod
forward_round2/1001_crcl_cl/1001_crcl_cl.ext
forward_round2/1001_crcl_cl/1001_crcl_cl.lst
forward_round2/1001_crcl_cl/pharos_end.json
forward_round2/1001_crcl_cl/pharos_start.json
forward_round2/1001_wt_v.mod
forward_round2/1001_wt_v/1001_wt_v.ext
forward_round2/1001_wt_v/1001_wt_v.lst
forward_round2/1001_wt_v/pharos_end.json
forward_round2/1001_wt_v/pharos_start.json
forward_round2/1001_wt_v_try2.mod
forward_round2/1001_wt_v_try2/1001_wt_v_try2.ext
forward_round2/1001_wt_v_try2/1001_wt_v_try2.lst
forward_round2/1001_wt_v_try2/pharos_end.json
forward_round2/1001_wt_v_try2/pharos_start.json
forward_round2/round_summary.json
forward_round2/round_summary.md
plan.json
scm_decision_log.csv
scm_decision_log.md
scm_state.json
scm_summary.json

# scm_state.json
{
  "schema_version": 2,
  "plan_digest": "[DIGEST]",
  "roster": [
    {
      "name": "WT_CL",
      "theta": 4,
      "initial": 0.1,
      "fixed": 0.0
    },
    {
      "name": "CRCL_CL",
      "theta": 5,
      "initial": 0.1,
      "fixed": 0.0
    },
    {
      "name": "WT_V",
      "theta": 6,
      "initial": 0.1,
      "fixed": 0.0
    }
  ],
  "status": "completed",
  "message": "SCM process completed, but some candidates were unusable (see the decision log); they were reported, never scored as insignificant",
  "retained": [
    "WT_CL"
  ],
  "reference_model": "forward_round1/1001_wt_cl.mod",
  "reference_ofv": 995.0,
  "phase": null,
  "rounds": [
    {
      "name": "reference",
      "direction": "forward",
      "reference_model": "-",
      "reference_ofv": null,
      "candidates": [
        {
          "candidate": "base",
          "action": "fit base model",
          "model": "base/1001_base.mod",
          "attempts": [
            {
              "model": "base/1001_base.mod",
              "outcome": "succeeded"
            }
          ],
          "status": "succeeded",
          "ofv": 1000.0,
          "delta_ofv": null,
          "df": 0,
          "p_value": null,
          "significant": null,
          "heuristics": [],
          "selected": false
        }
      ],
      "winner": null,
      "decision": "base model fitted (OFV 1000.000)",
      "complete": true
    },
    {
      "name": "forward_round1",
      "direction": "forward",
      "reference_model": "base/1001_base.mod",
      "reference_ofv": 1000.0,
      "candidates": [
        {
          "candidate": "WT_CL",
          "action": "add WT_CL",
          "model": "forward_round1/1001_wt_cl.mod",
          "attempts": [
            {
              "model": "forward_round1/1001_wt_cl.mod",
              "outcome": "succeeded"
            }
          ],
          "status": "succeeded",
          "ofv": 995.0,
          "delta_ofv": -5.0,
          "df": 1,
          "p_value": 0.02534731867746824,
          "significant": true,
          "heuristics": [],
          "selected": true
        },
        {
          "candidate": "CRCL_CL",
          "action": "add CRCL_CL",
          "model": "forward_round1/1001_crcl_cl.mod",
          "attempts": [
            {
              "model": "forward_round1/1001_crcl_cl.mod",
              "outcome": "succeeded"
            }
          ],
          "status": "succeeded",
          "ofv": 999.5,
          "delta_ofv": -0.5,
          "df": 1,
          "p_value": 0.47950012218695315,
          "significant": false,
          "heuristics": [],
          "selected": false
        },
        {
          "candidate": "WT_V",
          "action": "add WT_V",
          "model": "forward_round1/1001_wt_v_try2.mod",
          "attempts": [
            {
              "model": "forward_round1/1001_wt_v.mod",
              "outcome": "no ofv"
            },
            {
              "model": "forward_round1/1001_wt_v_try2.mod",
              "outcome": "no ofv"
            }
          ],
          "status": "unusable",
          "ofv": null,
          "delta_ofv": null,
          "df": 1,
          "p_value": null,
          "significant": null,
          "heuristics": [],
          "selected": false
        }
      ],
      "winner": "WT_CL",
      "decision": "added WT_CL (p = 2.535e-2, dOFV = -5.000)",
      "complete": true
    },
    {
      "name": "forward_round2",
      "direction": "forward",
      "reference_model": "forward_round1/1001_wt_cl.mod",
      "reference_ofv": 995.0,
      "candidates": [
        {
          "candidate": "CRCL_CL",
          "action": "add CRCL_CL",
          "model": "forward_round2/1001_crcl_cl.mod",
          "attempts": [
            {
              "model": "forward_round2/1001_crcl_cl.mod",
              "outcome": "succeeded"
            }
          ],
          "status": "succeeded",
          "ofv": 994.0,
          "delta_ofv": -1.0,
          "df": 1,
          "p_value": 0.3173105078629138,
          "significant": false,
          "heuristics": [],
          "selected": false
        },
        {
          "candidate": "WT_V",
          "action": "add WT_V",
          "model": "forward_round2/1001_wt_v_try2.mod",
          "attempts": [
            {
              "model": "forward_round2/1001_wt_v.mod",
              "outcome": "no ofv"
            },
            {
              "model": "forward_round2/1001_wt_v_try2.mod",
              "outcome": "no ofv"
            }
          ],
          "status": "unusable",
          "ofv": null,
          "delta_ofv": null,
          "df": 1,
          "p_value": null,
          "significant": null,
          "heuristics": [],
          "selected": false
        }
      ],
      "winner": null,
      "decision": "no candidate significant at alpha 0.05 (1 unusable, not scored); forward selection stopped",
      "complete": true
    }
  ],
  "final_model": "final/1001_scm_final.mod",
  "final_ofv": 1234.0,
  "had_unusable": true,
  "pending_tie": null,
  "updated": "[TIMESTAMP]"
}

# scm_decision_log.md
# SCM decision log

- model: `[TMP]/1001.mod`
- out dir: `[TMP]/scm/1001`
- direction: forward
- alphas: forward 0.05, backward 0.001
- retries: up to 1 per fit, starting from the previous attempt's estimates
- covariance step: off
- status: completed
- retained: WT_CL
- final model: `final/1001_scm_final.mod` (not fitted by the SCM process)
- note: SCM process completed, but some candidates were unusable (see the decision log); they were reported, never scored as insignificant

## reference

| candidate | model | attempts | status | ΔOFV | df | p | significant | selected | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|
| base | `base/1001_base.mod` | 1 | succeeded |  | 0 |  |  |  | - |

**Decision:** base model fitted (OFV 1000.000)

## forward_round1

Reference: `base/1001_base.mod` (OFV 1000.000)

| candidate | model | attempts | status | ΔOFV | df | p | significant | selected | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|
| WT_CL | `forward_round1/1001_wt_cl.mod` | 1 | succeeded | -5.000 | 1 | 2.5347e-2 | yes | **yes** | - |
| CRCL_CL | `forward_round1/1001_crcl_cl.mod` | 1 | succeeded | -0.500 | 1 | 4.7950e-1 | no |  | - |
| WT_V | `forward_round1/1001_wt_v_try2.mod` | 2 | unusable |  | 1 |  |  |  | - |

**Decision:** added WT_CL (p = 2.535e-2, dOFV = -5.000)

_Unusable candidates are reported above; they are never scored as insignificant._

## forward_round2

Reference: `forward_round1/1001_wt_cl.mod` (OFV 995.000)

| candidate | model | attempts | status | ΔOFV | df | p | significant | selected | heuristic checks |
|---|---|---|---|---|---|---|---|---|---|
| CRCL_CL | `forward_round2/1001_crcl_cl.mod` | 1 | succeeded | -1.000 | 1 | 3.1731e-1 | no |  | - |
| WT_V | `forward_round2/1001_wt_v_try2.mod` | 2 | unusable |  | 1 |  |  |  | - |

**Decision:** no candidate significant at alpha 0.05 (1 unusable, not scored); forward selection stopped

_Unusable candidates are reported above; they are never scored as insignificant._
